--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,4 +4,4 @@ spring:
     name: 'Respawn Hub'
 rawg:
   endpoint: 'https://api.rawg.io/api/games?key='
-  apikey: ''
+  apikey: '2fc5fdb2f990452891cbcd397b6037d9'
