Profile Dev ativado

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,8 @@
 spring:
   application:
     name: 'Respawn Hub'
+    profiles:
+      active: 'dev'
 rawg:
   endpoint: 'https://api.rawg.io/api/games?key='
   apikey: '2fc5fdb2f990452891cbcd397b6037d9'
