--- a/pom.xml
+++ b/pom.xml
@@ -52,11 +52,11 @@
 			<scope>test</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>2.18.2</version>
-		</dependency>
+		</dependency> -->
 		<!-- Proximas depencias: MySQL Driver, Spring JPA, Flyway, Validation, SpringDoc, Web Security, TokenAuth -->
 	</dependencies>
 
