--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,10 +2,10 @@
 spring:
   application:
     name: 'Respawn Hub'
-    profiles:
-      active: 'dev'
+  profiles:
+    active: 'dev'
 rawg:
   endpoint: 'https://api.rawg.io/api'
-  path: '/games'
+  path: ''
   query: ''
   apikey: '?key='
