--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,10 @@
 			<version>2.18.2</version>
 		</dependency>
 		<!-- Proximas depencias: MySQL Driver, Spring JPA, Flyway, Validation, SpringDoc, Web Security, TokenAuth -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
