--- a/pom.xml
+++ b/pom.xml
@@ -57,11 +57,16 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.18.2</version>
 		</dependency>
-		<!-- Proximas depencias: MySQL Driver, Spring JPA, Flyway, Validation, SpringDoc, Web Security, TokenAuth -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<!-- Proximas depencias: Flyway, Validation, SpringDoc, Web Security, TokenAuth -->
 	</dependencies>
 
 	<build>
