--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,17 @@
-# For more inforamtion https://www.baeldung.com/spring-boot-yaml-vs-properties
 spring:
   application:
     name: 'Respawn Hub'
-    profiles:
-      active: 'dev'
+  profiles:
+    active: 'dev'
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    hikari:
+      maximum-pool-size: 10
+      minimum-idle: 2
+  jpa:
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+    hibernate:
+      ddl-auto: none
 rawg:
   endpoint: 'https://api.rawg.io/api'
   path: '/games'
