--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,9 @@
+# For more inforamtion https://www.baeldung.com/spring-boot-yaml-vs-properties
 spring:
   application:
     name: 'Respawn Hub'
-  profiles:
-    active: 'dev'
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    hikari:
-      maximum-pool-size: 10
-      minimum-idle: 2
-  jpa:
-    database-platform: org.hibernate.dialect.MySQL8Dialect
-    hibernate:
-      ddl-auto: none
+    profiles:
+      active: 'dev'
 rawg:
   endpoint: 'https://api.rawg.io/api'
   path: '/games'
