--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,8 @@ spring:
     name: 'Respawn Hub'
     profiles:
       active: 'dev'
+  profiles:
+    active: 'dev'
 rawg:
   endpoint: 'https://api.rawg.io/api'
   path: '/games'
