--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,3 @@
-# For more inforamtion https://www.baeldung.com/spring-boot-yaml-vs-properties
 spring:
   application:
     name: 'Respawn Hub'
@@ -6,6 +5,8 @@ spring:
       active: 'dev'
   profiles:
     active: 'dev'
+  datasource:
+    driverClassName: com.mysql.cj.jdbc.Driver
 rawg:
   endpoint: 'https://api.rawg.io/api'
   path: '/games'
