--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,11 @@
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		<!-- Proximas depencias: Flyway, Validation, SpringDoc, Web Security, TokenAuth -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<!-- Proximas depencias: Flyway, SpringDoc, Web Security, TokenAuth -->
 	</dependencies>
 
 	<build>
