Add config SGBD MySQL e atualizacao DB

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,5 +3,6 @@ spring:
     url: jdbc:mysql://localhost:3310/respawn_hub_db?allowPublicKeyRetrieval=true&useSSL=false
     username: moonuser
     password: moonkey
-
-
+  jpa:
+    hibernate:
+      ddl-auto: update
